old_tests/tests/lean/match_convoy_infer_type_failure.lean
constant p : nat → Type
constant q : p 1 → Prop

lemma ex : ∀ a : p 1, q a :=
match q, p with
| q, p := sorry
end
